--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,27 @@ html, body{ height: 100%; }
 	margin-bottom: 50px;
 	margin-left: -10px;
 } 
+/* whatsapp code start */
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:100px;
+	right:20px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	/* box-shadow: 2px 2px 3px #999; */
+  z-index:100;
+}
 
+.my-float{
+	margin-top:16px;
+}
+
+/* end whatsapp code */
 #loader  {
      position: fixed;
      top: 0;
